# image_size_reduce

./: README.md  pyproject.toml  requirements.txt
backend/: __init__.py  compressor.py  main.py
froentend/: app.py  index.html  script.js  style.css
